Tests for release bundles and distribution for commercial releases